--- a/index.html
+++ b/index.html
@@ -3160,13 +3160,13 @@
     <!-- ENDS :: Content -->
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js">
+    <script src="bower_components/jquery/dist/jquery.js">
     </script>
-    <script src="/bower_components/pushy/js/pushy.js">
+    <script src="bower_components/pushy/js/pushy.js">
     </script>
-    <script src="/bower_components/owl.carousel/dist/owl.carousel.js">
+    <script src="bower_components/owl.carousel/dist/owl.carousel.js">
     </script>
-    <script src="/bower_components/strip/dist/js/strip.pkgd.js">
+    <script src="bower_components/strip/dist/js/strip.pkgd.js">
     </script> <!-- endbower --> <!-- endbuild -->
      <!-- build:js(.) scripts/plugins.js -->
 
