--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="/favicon.ico" rel="shortcut icon">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
-    <link href="https://github.com/dimerbox/darylbaker/bower_components/animate.css/animate.css" rel="stylesheet">
+    <link href="/blob/master/bower_components/animate.css/animate.css" rel="stylesheet">
     <!--     <link rel="stylesheet" href="styles/owl.carousel.css">
     <link rel="stylesheet" href="styles/owl.transitions.css"> -->
     <link href=
