--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
     <link href="/favicon.ico" rel="shortcut icon">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
-    <link href="blob/master/bower_components/animate.css/animate.css" rel="stylesheet">
+    <link href="/bower_components/animate.css/animate.css" rel="stylesheet">
     <!--     <link rel="stylesheet" href="styles/owl.carousel.css">
     <link rel="stylesheet" href="styles/owl.transitions.css"> -->
     <link href=
     'https://fonts.googleapis.com/css?family=Roboto:400,700,900,300,100' rel=
     'stylesheet' type='text/css'><!-- bower:css -->
-    <link href="bower_components/pushy/css/pushy.css" rel="stylesheet">
-    <link href="bower_components/animate.css/animate.css" rel="stylesheet">
-    <link href="bower_components/owl.carousel/dist/assets/owl.carousel.css"
+    <link href="/bower_components/pushy/css/pushy.css" rel="stylesheet">
+    <link href="/bower_components/animate.css/animate.css" rel="stylesheet">
+    <link href="/bower_components/owl.carousel/dist/assets/owl.carousel.css"
     rel="stylesheet">
-    <link href="bower_components/strip/dist/css/strip.css" rel="stylesheet">
+    <link href="/bower_components/strip/dist/css/strip.css" rel="stylesheet">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link href="styles/app.css" rel="stylesheet"><!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="bower_components/modernizr/modernizr.js">
+    <script src="/bower_components/modernizr/modernizr.js">
     </script><!-- endbuild -->
 
 </head>
